--- a/client/dhclient.8
+++ b/client/dhclient.8
@@ -1,6 +1,6 @@
-.\"	$Id: dhclient.8,v 1.33 2009/11/24 02:06:56 sar Exp $
+.\"	$Id: dhclient.8,v 1.34 2010/07/02 23:09:14 sar Exp $
 .\"
-.\" Copyright (c) 2004,2007-2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2007-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -22,7 +22,7 @@
 .\"   https://www.isc.org/
 .\"
 .\" Support and other services are available for ISC products - see
-.\" https://www.isc.org for more information.
+.\" https://www.isc.org for more information or to learn more about ISC.
 .\"
 .TH dhclient 8
 .SH NAME
