--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhclient.conf.5,v 1.22.64.5 2010/04/27 22:22:47 sar Exp $
+.\"	$Id: dhclient.conf.5,v 1.22.64.6 2010/07/02 23:37:06 sar Exp $
 .\"
 .\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
@@ -24,10 +24,9 @@
 .\"
 .\" This software has been written for Internet Software Consortium
 .\" by Ted Lemon in cooperation with Vixie Enterprises and Nominum, Inc.
-.\" To learn more about Internet Software Consortium, see
-.\" ``https://www.isc.org/''.  To learn more about Vixie Enterprises,
-.\" see ``http://www.vix.com''.   To learn more about Nominum, Inc., see
-.\" ``http://www.nominum.com''.
+.\" 
+.\" Support and other services are available for ISC products - see
+.\" https://www.isc.org for more information or to learn more about ISC.
 .\"
 .TH dhclient.conf 5
 .SH NAME
@@ -189,7 +188,7 @@ statement - not option parameters.   By default, the DHCPv4 client
 requests the subnet-mask, broadcast-address, time-offset, routers,
 domain-name, domain-name-servers and host-name options while the DHCPv6
 client requests the dhcp6 name-servers and domain-search options.  Note
-that if you enter a 'request' statement, you over-ride these defaults
+that if you enter a \'request\' statement, you over-ride these defaults
 and these options will not be requested.
 .PP
 In some cases, it may be desirable to send no parameter request list
@@ -202,7 +201,7 @@ no parameters:
 .PP
 In most cases, it is desirable to simply add one option to the request
 list which is of interest to the client in question.  In this case, it
-is best to 'also request' the additional options:
+is best to \'also request\' the additional options:
 .PP
 .nf
 	also request domain-search, dhcp6.sip-servers-addresses;
