--- a/common/dhcp-eval.5
+++ b/common/dhcp-eval.5
@@ -1,6 +1,7 @@
-.\"	$Id: dhcp-eval.5,v 1.27.364.2 2009/07/24 22:04:52 sar Exp $
+.\"	$Id: dhcp-eval.5,v 1.27.364.3 2010/07/02 23:37:06 sar Exp $
 .\"
-.\" Copyright (c) 2004,2007,2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -23,10 +24,10 @@
 .\"
 .\" This software has been written for Internet Systems Consortium
 .\" by Ted Lemon in cooperation with Vixie Enterprises and Nominum, Inc.
-.\" To learn more about Internet Systems Consortium, see
-.\" ``https://www.isc.org/''.  To learn more about Vixie Enterprises,
-.\" see ``http://www.vix.com''.   To learn more about Nominum, Inc., see
-.\" ``http://www.nominum.com''.
+.\"
+.\" Support and other services are available for ISC products - see
+.\" https://www.isc.org for more information or to learn more about ISC.
+.\"
 .TH dhcp-eval 5
 .SH NAME
 dhcp-eval - ISC DHCP conditional evaluation
