--- a/relay/dhcrelay.8
+++ b/relay/dhcrelay.8
@@ -1,6 +1,7 @@
 .\"	dhcrelay.8
 .\"
-.\" Copyright (c) 2004,2007,2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1997-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -22,12 +23,12 @@
 .\"   https://www.isc.org/
 .\"
 .\" This software has been written for Internet Systems Consortium
-.\" by Ted Lemon in cooperation with Vixie
-.\" Enterprises.  To learn more about Internet Systems Consortium,
-.\" see ``https://www.isc.org/''.  To learn more about Vixie
-.\" Enterprises, see ``http://www.vix.com''.
+.\" by Ted Lemon in cooperation with Vixie Enterprises.
 .\"
-.\" $Id: dhcrelay.8,v 1.14.206.3 2009/08/06 22:05:34 sar Exp $
+.\" Support and other services are available for ISC products - see
+.\" https://www.isc.org for more information or to learn more about ISC.
+.\"
+.\" $Id: dhcrelay.8,v 1.14.206.4 2010/07/02 23:56:27 sar Exp $
 .\"
 .TH dhcrelay 8
 .SH NAME
@@ -229,6 +230,10 @@ It should be possible for the user to define the Circuit ID and Remote
 ID values on a per-interface basis.
 .PP
 The relay agent should not relay packets received on a physical
+.SH AUTHOR
+.B dhcrelay(8)
+To learn more about Internet Systems Consortium, see
+.B https://www.isc.org
 network to DHCP servers on the same physical network - if they do, the
 server will receive duplicate packets.   In order to fix this,
 however, the relay agent needs to be able to learn about the network
