--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhcp-options.5,v 1.39.114.5 2010/07/02 23:56:27 sar Exp $
+.\"	$Id: dhcp-options.5,v 1.39.114.6 2010/07/13 20:57:34 dhankins Exp $
 .\"
 .\" Copyright (c) 2004-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -27,7 +27,7 @@
 .\" Support and other services are available for ISC products - see
 .\" https://www.isc.org for more information or to learn more about ISC.
 .\"
-.TH dhcpd-options 5
+.TH dhcp-options 5
 .SH NAME
 dhcp-options - Dynamic Host Configuration Protocol options
 .SH DESCRIPTION
